# mojo-einsum

./: .gitignore  .mojo-version  CHANGELOG.md  README.md  flake.nix  pyproject.toml
.github/workflows/: lint.yml  wheels.yml
docs/: comparisons.md  derivations.md  ffi.md  notation.md  perf.md  plan-verification.md
docs/fixtures/: cache_bench_example.json
examples/: attn.py
python/moeinsum/: __init__.py  _cache.py  _cost.py  _interop.py  _interop_max.py  _lowering.py  _max_backend.py  _max_graph.py  _native.pyi  _native_gpu.pyi  bench.py  lowering.py
python/moeinsum/_cli/: __init__.py  bench.py  lowering.py
python/mojo_einsum/: __init__.py  _cache.py  bench.py
scripts/: build_simple_index.py
src/: lib.mojo  native_gpu.mojo
src/einsum/: __init__.mojo  max_ffi.mojo  parse.mojo  path.mojo  plan.mojo  unary.mojo
src/einsum/backends/: __init__.mojo  max.mojo  max_kernels.mojo  native.mojo  reference.mojo
tests/mojo/: smoke_compute_path.mojo  smoke_parse.mojo  smoke_path_cost.mojo
tests/python/: conftest.py  test_backend_stubs.py  test_bench_cli.py  test_branch.py  test_cache_and_edges.py  test_einsum_ir.py  test_explicit_path.py  test_interop.py  test_jax_corpus.py  test_lowering_cli.py  test_max_backend.py  test_max_backend_bf16.py  test_max_backend_perf.py  test_numpy_parity.py  test_opt_einsum_parity.py  test_p1_smoke.py  test_parser_errors.py  test_path_cost.py  test_property.py  test_random_greedy_band.py
