[build-system]
requires = ["mohaus>=0.1,<0.2"]
build-backend = "mohaus.backend"

[project]
name = "moeinsum"
version = "0.1.0"
description = "einsum impolementation in Mojo"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Aaron Pham", email = "contact@aarnphm.xyz" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.26"]

[project.scripts]
moeinsum-bench = "moeinsum.bench:main"
moeinsum-lowering = "moeinsum.lowering:main"

[project.optional-dependencies]
max = ["max"]
torch = ["torch>=2.4"]
jax = ["jax>=0.4.30"]
mlx = ["mlx>=0.20"]
opt-einsum = ["opt_einsum>=3.3"]
dev = [
  "pytest>=8",
  "pytest-xdist>=3",
  "hypothesis>=6",
  "ruff>=0.5",
  "ty",
  "ipython",
]

[dependency-groups]
bench = ["tqdm"]

[tool.mohaus]
module-name = "moeinsum._native"
strip = true
generate-stub = false
mojo-flags = []

[tool.ruff]
extend-include = ["*.ipynb"]
preview = true
line-length = 119
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
ignore = ["E111", "E114"]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.ty.src]
exclude = ["tests/**"]

[tool.ty.rules]
all = "error"

[tool.uv.sources]
mojo = { index = "modular-nightly" }

[[tool.uv.index]]
name = "modular-nightly"
url = "https://whl.modular.com/nightly/simple/"
explicit = true
