[build-system]
requires = ["mohaus>=0.1", "modular"]
build-backend = "mohaus.backend"

[project]
name = "moeinsum"
version = "0.1.0"
description = "einsum impolementation in Mojo"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Aaron Pham", email = "contact@aarnphm.xyz" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=2", "modular", "ml_dtypes>=0.5"]

[project.scripts]
moeinsum-bench = "moeinsum._cli.bench:main"
moeinsum-lowering = "moeinsum._cli.lowering:main"

[project.optional-dependencies]
interop = ["torch>=2.4", "jax>=0.4.30", "mlx>=0.20", "opt_einsum>=3.3"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-xdist>=3",
  "hypothesis>=6",
  "ruff>=0.5",
  "ty",
  "ipython",
  "tqdm",
  "mohaus>=0.1",
]

[tool.mohaus]
module-name = "moeinsum._native"
strip = true
generate-stub = false
mojo-flags = []

[tool.ruff]
extend-include = ["*.ipynb"]
preview = true
line-length = 119
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
ignore = ["E111", "E114"]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.ty.src]
exclude = ["tests/**"]

[tool.ty.rules]
all = "error"

[tool.uv]
index-strategy = "unsafe-best-match"
extra-index-url = [
  "https://aarnphm.github.io/mohaus/simple",
  "https://whl.modular.com/nightly/simple/",
]
prerelease = "allow"
